* Update to SVM model on LMSC data

--- a/cc_tenor_svm_lmsc.ipynb
+++ b/cc_tenor_svm_lmsc.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,18 +176,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'C': 2.7590006487818672,\n",
+       " 'break_ties': False,\n",
+       " 'cache_size': 200,\n",
+       " 'class_weight': None,\n",
+       " 'coef0': 0.0,\n",
+       " 'decision_function_shape': 'ovr',\n",
+       " 'degree': 3,\n",
+       " 'gamma': 'scale',\n",
+       " 'kernel': 'rbf',\n",
+       " 'max_iter': -1,\n",
+       " 'probability': False,\n",
+       " 'random_state': None,\n",
+       " 'shrinking': True,\n",
+       " 'tol': 0.001,\n",
+       " 'verbose': False}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "params"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8586572438162544\n"
+     ]
+    }
+   ],
    "source": [
     "clf = SVC(C=params['C'])\n",
     "clf.fit(x_train, y_train)\n",
@@ -197,9 +230,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>442</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>82</td>\n",
+       "      <td>530</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     0    1\n",
+       "0  442   78\n",
+       "1   82  530"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "c_matrix = confusion_matrix(y_test, y_pred)\n",
     "idx = cols = [0, 1]\n",
@@ -208,9 +292,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.84      0.85      0.85       520\n",
+      "           1       0.87      0.87      0.87       612\n",
+      "\n",
+      "    accuracy                           0.86      1132\n",
+      "   macro avg       0.86      0.86      0.86      1132\n",
+      "weighted avg       0.86      0.86      0.86      1132\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(classification_report(y_test, y_pred))"
    ]
