--- a/cc_tenor_brass_ok_svm_lmsc.ipynb
+++ b/cc_tenor_brass_ok_svm_lmsc.ipynb
@@ -4,35 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tenor saxophone\n",
+    "# Testing Tenor Log Mel Spectrogram with Support Vector Machine\n",
+    "## Brass instruments included\n",
     "\n",
-    "* Sample duration = 5s\n",
-    "* model = SVM\n",
-    "* target = TENOR\n",
+    "Here we test a support vector machine on log Mel spectrogram data extracted from our WAV samles. Each log Mel spectrogram has 96 x 96 = 9,216 features, where 96 is the number of frequency bands, and 96 is the number of time slices (collections of 2,297 raw samples). So this is a lot of data.\n",
     "\n",
-    "Distinguish between samples with tenor saxophone from those without tenor saxophone. Other brass and reed instruments excluded."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import Audio\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.decomposition import PCA \n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import confusion_matrix, classification_report\n",
-    "from sklearn.model_selection import train_test_split, \\\n",
-    "                                    RandomizedSearchCV, GridSearchCV\n",
-    "from sklearn.ensemble import BaggingClassifier\n",
-    "from scipy.stats import uniform\n",
+    "Upstream from this notebook we extracted these features and saved them as pickles, then we read all the pickles and aggregated them into a Pandas DataFrame, again saved as a pickle. Finally, with the imported `_tenor_lms` (below) we read from this pickle, filter and reshape the data as needed, and then we scale data using `sklearn.preprocessing.StandardScaler`. At this point, data are ready to read into our notebook.\n",
     "\n",
-    "from pickles_to_pandas import pickles_to_pandas"
+    "In this notebook we define, train, and test a SVM with these log Mel spectrogram data as input."
    ]
   },
   {
@@ -41,7 +20,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pickles_to_pandas('./data/5s/labeled/features_r02/selected')"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "from sklearn.model_selection import train_test_split, \\\n",
+    "                                    RandomizedSearchCV, GridSearchCV\n",
+    "from sklearn.ensemble import BaggingClassifier\n",
+    "from scipy.stats import uniform\n",
+    "\n",
+    "from _common import NUM_LABEL_COLS, RANDOM_SEED\n",
+    "from _tenor_lmsc_brass_ok import TEST_SIZE, VALIDATION_SIZE, \\\n",
+    "    BANDS, TIME_SLICES, master, lmss, data, target\n",
+    "# Note that records are read from pickle, selected, filtered,\n",
+    "# and scaled with `sklearn.preprocessing.StandardScaler` \n",
+    "# in `_tenor_lmsc_brass_ok.py`."
    ]
   },
   {
@@ -50,166 +43,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NUM_LABEL_COLS = 13\n",
-    "NUM_COMPONENTS = 32\n",
-    "TEST_SIZE = 0.2\n",
-    "RANDOM_SEED = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1316, 10790)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_filtered = df[df['excl'] == '0']  # exclude records we want to exclude\n",
-    "df_filtered = df\n",
-    "df_filtered.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(806, 10775)\n",
-      "(806,)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# exclude records we want to exclude\n",
-    "df_filtered = df_filtered[df_filtered['alto'] == '0'] \n",
-    "df_filtered = df_filtered[df_filtered['sop'] == '0']\n",
-    "df_filtered = df_filtered[df_filtered['bari'] == '0']\n",
-    "df_filtered = df_filtered[df_filtered['clrt'] == '0']\n",
-    "df_filtered = df_filtered[df_filtered['tora'] == '0']\n",
-    "df_filtered = df_filtered[df_filtered['othr'] == '0']\n",
-    "df_filtered = df_filtered[df_filtered['trmp'] == '0']\n",
-    "df_filtered = df_filtered[df_filtered['trmb'] == '0']\n",
-    "df_filtered = df_filtered[df_filtered['otrb'] == '0']\n",
-    "\n",
-    "num_x_cols = df_filtered.shape[1] - NUM_LABEL_COLS - 1  \n",
-    "# ^ last bit to adjust for zero indexing\n",
-    "data = df_filtered.iloc[:, 1:num_x_cols].to_numpy() \n",
-    "# ^ These are the features\n",
-    "scaler = StandardScaler()\n",
-    "scaler.fit(data)\n",
-    "data = scaler.transform(data)\n",
-    "\n",
-    "target = df_filtered[['tenr']].to_numpy().ravel()  # << This is the label\n",
-    "\n",
-    "print(data.shape)\n",
-    "print(target.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pca = PCA(n_components=NUM_COMPONENTS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PCA(n_components=32)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pca.fit(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(pca.explained_variance_ratio_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(pca.singular_values_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d = pca.transform(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "x_train, x_test, y_train, y_test = \\\n",
-    "     train_test_split(d, target, test_size=TEST_SIZE, random_state=RANDOM_SEED)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Test plain vanilla SVM"
+    "     train_test_split(data, target, test_size=TEST_SIZE, random_state=RANDOM_SEED)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.845679012345679\n"
+      "0.8152580403889305\n"
      ]
     }
    ],
@@ -222,10 +69,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -255,25 +100,25 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>99</td>\n",
-       "      <td>6</td>\n",
+       "      <td>550</td>\n",
+       "      <td>133</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>19</td>\n",
-       "      <td>38</td>\n",
+       "      <td>114</td>\n",
+       "      <td>540</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    0   1\n",
-       "0  99   6\n",
-       "1  19  38"
+       "     0    1\n",
+       "0  550  133\n",
+       "1  114  540"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -295,12 +140,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.84      0.94      0.89       105\n",
-      "           1       0.86      0.67      0.75        57\n",
+      "           0       0.83      0.81      0.82       683\n",
+      "           1       0.80      0.83      0.81       654\n",
       "\n",
-      "    accuracy                           0.85       162\n",
-      "   macro avg       0.85      0.80      0.82       162\n",
-      "weighted avg       0.85      0.85      0.84       162\n",
+      "    accuracy                           0.82      1337\n",
+      "   macro avg       0.82      0.82      0.82      1337\n",
+      "weighted avg       0.82      0.82      0.82      1337\n",
       "\n"
      ]
     }
@@ -310,20 +155,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Determine good value for C using random search"
+    "# DID NOT FIND BETTER C than 1.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_params = {\n",
-    "    'C': uniform(0.1, 4.0)\n",
+    "    'C': uniform(0.1, 10.0)\n",
     "}\n",
     "\n",
     "# RandomizedSearchCV(estimator, param_distributions, *, n_iter=10, \n",
@@ -332,21 +179,20 @@
     "#                    pre_dispatch='2*n_jobs', random_state=None, \n",
     "#                    error_score=nan, return_train_score=False)\n",
     "svm_model = SVC()\n",
-    "clf = RandomizedSearchCV(svm_model, model_params, n_iter=10, \n",
-    "                         cv=5)\n",
+    "clf = RandomizedSearchCV(svm_model, model_params, n_iter=10, cv=5)\n",
     "model = clf.fit(x_train, y_train)\n",
     "params = model.best_estimator_.get_params()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'C': 3.6179237940301725,\n",
+       "{'C': 4.1379600697579235,\n",
        " 'break_ties': False,\n",
        " 'cache_size': 200,\n",
        " 'class_weight': None,\n",
@@ -363,25 +209,42 @@
        " 'verbose': False}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "params"
+    "params\n",
+    "\"\"\"\n",
+    "{'C': 4.1379600697579235,\n",
+    " 'break_ties': False,\n",
+    " 'cache_size': 200,\n",
+    " 'class_weight': None,\n",
+    " 'coef0': 0.0,\n",
+    " 'decision_function_shape': 'ovr',\n",
+    " 'degree': 3,\n",
+    " 'gamma': 'scale',\n",
+    " 'kernel': 'rbf',\n",
+    " 'max_iter': -1,\n",
+    " 'probability': False,\n",
+    " 'random_state': None,\n",
+    " 'shrinking': True,\n",
+    " 'tol': 0.001,\n",
+    " 'verbose': False}\n",
+    " \"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8950617283950617\n"
+      "0.8130142109199701\n"
      ]
     }
    ],
@@ -394,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -425,25 +288,25 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>97</td>\n",
-       "      <td>8</td>\n",
+       "      <td>553</td>\n",
+       "      <td>130</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>9</td>\n",
-       "      <td>48</td>\n",
+       "      <td>120</td>\n",
+       "      <td>534</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    0   1\n",
-       "0  97   8\n",
-       "1   9  48"
+       "     0    1\n",
+       "0  553  130\n",
+       "1  120  534"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -465,12 +328,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.92      0.92      0.92       105\n",
-      "           1       0.86      0.84      0.85        57\n",
+      "           0       0.82      0.81      0.82       683\n",
+      "           1       0.80      0.82      0.81       654\n",
       "\n",
-      "    accuracy                           0.90       162\n",
-      "   macro avg       0.89      0.88      0.88       162\n",
-      "weighted avg       0.89      0.90      0.89       162\n",
+      "    accuracy                           0.81      1337\n",
+      "   macro avg       0.81      0.81      0.81      1337\n",
+      "weighted avg       0.81      0.81      0.81      1337\n",
       "\n"
      ]
     }
@@ -478,6 +341,13 @@
    "source": [
     "print(classification_report(y_test, y_pred))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -496,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
