--- a/cc_mt_alto_tenor_svm.ipynb
+++ b/cc_mt_alto_tenor_svm.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,65 +29,61 @@
     "from sklearn.model_selection import train_test_split, \\\n",
     "    RandomizedSearchCV, GridSearchCV\n",
     "from sklearn.ensemble import BaggingClassifier\n",
-    "from scipy.stats import uniform\n",
-    "\n",
-    "# from pickles_to_pandas import pickles_to_pandas\n"
+    "from scipy.stats import uniform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_pickle('./data/5s/labeled/features_r02/all_data.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NUM_LABEL_COLS = 13\n",
+    "NUM_COMPONENTS = 26\n",
+    "RANDOM_SEED = 0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df = pickles_to_pandas('./data/5s/labeled/features_r02')\n",
-    "df = pd.read_pickle('./data/5s/labeled/features_r02/all_data.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "NUM_LABEL_COLS = 13\n",
-    "NUM_COMPONENTS = 40\n",
-    "RANDOM_SEED = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(6819, 10790)"
+       "(9080, 10790)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# df_filtered = df[df['excl'] == '0']  # exclude records we want to exclude\n",
     "df_filtered = df\n",
     "df_filtered.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5444, 10775)\n",
-      "(5444,)\n"
+      "(7368, 10775)\n",
+      "(7368,)\n"
      ]
     }
    ],
@@ -123,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,16 +128,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PCA(n_components=40)"
+       "PCA(n_components=26)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,25 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(pca.explained_variance_ratio_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(pca.singular_values_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,16 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,14 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8576675849403123\n"
+      "0.8704206241519674\n"
      ]
     }
    ],
@@ -225,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -256,13 +225,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>361</td>\n",
-       "      <td>86</td>\n",
+       "      <td>482</td>\n",
+       "      <td>97</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>69</td>\n",
-       "      <td>573</td>\n",
+       "      <td>94</td>\n",
+       "      <td>801</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -270,11 +239,11 @@
       ],
       "text/plain": [
        "     0    1\n",
-       "0  361   86\n",
-       "1   69  573"
+       "0  482   97\n",
+       "1   94  801"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -298,12 +267,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.84      0.81      0.82       447\n",
-      "           1       0.87      0.89      0.88       642\n",
+      "           0       0.84      0.83      0.83       579\n",
+      "           1       0.89      0.89      0.89       895\n",
       "\n",
-      "    accuracy                           0.86      1089\n",
-      "   macro avg       0.85      0.85      0.85      1089\n",
-      "weighted avg       0.86      0.86      0.86      1089\n",
+      "    accuracy                           0.87      1474\n",
+      "   macro avg       0.86      0.86      0.86      1474\n",
+      "weighted avg       0.87      0.87      0.87      1474\n",
       "\n"
      ]
     }
@@ -321,12 +290,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_params = {\n",
-    "    'C': uniform(0.1, 4.0)\n",
+    "    'C': uniform(0.1, 10.0)\n",
     "}\n",
     "\n",
     "# RandomizedSearchCV(estimator, param_distributions, *, n_iter=10, \n",
@@ -347,15 +316,49 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "{'C': 8.879914721794334,\n",
+       " 'break_ties': False,\n",
+       " 'cache_size': 200,\n",
+       " 'class_weight': None,\n",
+       " 'coef0': 0.0,\n",
+       " 'decision_function_shape': 'ovr',\n",
+       " 'degree': 3,\n",
+       " 'gamma': 'scale',\n",
+       " 'kernel': 'rbf',\n",
+       " 'max_iter': -1,\n",
+       " 'probability': False,\n",
+       " 'random_state': None,\n",
+       " 'shrinking': True,\n",
+       " 'tol': 0.001,\n",
+       " 'verbose': False}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8640955004591369\n"
+      "0.8792401628222524\n"
      ]
     }
    ],
    "source": [
-    "clf = SVC(C=params['C'])\n",
+    "clf = SVC(C=8.879914721794334)\n",
     "clf.fit(x_train, y_train)\n",
     "y_pred = clf.predict(x_test)\n",
     "print(clf.score(x_test, y_test))\n"
@@ -363,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -394,13 +397,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>366</td>\n",
-       "      <td>81</td>\n",
+       "      <td>499</td>\n",
+       "      <td>80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>67</td>\n",
-       "      <td>575</td>\n",
+       "      <td>98</td>\n",
+       "      <td>797</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -408,11 +411,11 @@
       ],
       "text/plain": [
        "     0    1\n",
-       "0  366   81\n",
-       "1   67  575"
+       "0  499   80\n",
+       "1   98  797"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -436,12 +439,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.85      0.82      0.83       447\n",
-      "           1       0.88      0.90      0.89       642\n",
+      "           0       0.84      0.86      0.85       579\n",
+      "           1       0.91      0.89      0.90       895\n",
       "\n",
-      "    accuracy                           0.86      1089\n",
-      "   macro avg       0.86      0.86      0.86      1089\n",
-      "weighted avg       0.86      0.86      0.86      1089\n",
+      "    accuracy                           0.88      1474\n",
+      "   macro avg       0.87      0.88      0.87      1474\n",
+      "weighted avg       0.88      0.88      0.88      1474\n",
       "\n"
      ]
     }
@@ -459,29 +462,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'max_features': 33, 'n_estimators': 100}"
+       "{'max_features': 19}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Parameters\n",
-    "p = {'n_estimators': [100, 200, 300, 400, 500],\n",
-    "     'max_features': [NUM_COMPONENTS - 2, NUM_COMPONENTS - 3, \n",
+    "p = {'max_features': [NUM_COMPONENTS - 2, NUM_COMPONENTS - 3, \n",
     "                      NUM_COMPONENTS - 4, NUM_COMPONENTS - 5,\n",
     "                      NUM_COMPONENTS - 6, NUM_COMPONENTS - 7]}\n",
     "\n",
-    "base_estimator = SVC(C=params['C'])\n",
-    "estimator = BaggingClassifier(base_estimator=base_estimator)\n",
+    "base_estimator = SVC(C=8.879914721794334)\n",
+    "estimator = BaggingClassifier(base_estimator=base_estimator, n_estimators=100)\n",
     "# Question: Should we include C here, or ... ? There's no reason it should differ\n",
     "# for different values of n_estimators, but what about max_features? Might different\n",
     "# values for C be best for different max_features? Maybe. Dunno. Maybe we should\n",
@@ -494,12 +496,12 @@
     "search = clf.fit(x_train, y_train)\n",
     "search.best_params_\n",
     "\n",
-    "# {'max_features': 33, 'n_estimators': 100}"
+    "# {'max_features': 19}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,9 +510,9 @@
     "#                   bootstrap=True, bootstrap_features=False, \n",
     "#                   oob_score=False, warm_start=False, \n",
     "#                   n_jobs=None, random_state=None, verbose=0) \n",
-    "clf = BaggingClassifier(base_estimator=SVC(C=params['C']),\n",
-    "                        n_estimators=search.best_params_['n_estimators'], \n",
-    "                        max_features=search.best_params_['max_features'],\n",
+    "clf = BaggingClassifier(base_estimator=SVC(C=8.879914721794334),\n",
+    "                        n_estimators=500, \n",
+    "                        max_features=19,\n",
     "                        random_state=RANDOM_SEED,\n",
     "                        n_jobs=-1)\n",
     "model = clf.fit(x_train, y_train)"
@@ -518,14 +520,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8686868686868687\n"
+      "0.8833107191316146\n"
      ]
     }
    ],
@@ -536,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -567,13 +569,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>368</td>\n",
-       "      <td>79</td>\n",
+       "      <td>489</td>\n",
+       "      <td>90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>64</td>\n",
-       "      <td>578</td>\n",
+       "      <td>82</td>\n",
+       "      <td>813</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -581,11 +583,11 @@
       ],
       "text/plain": [
        "     0    1\n",
-       "0  368   79\n",
-       "1   64  578"
+       "0  489   90\n",
+       "1   82  813"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -609,12 +611,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.85      0.82      0.84       447\n",
-      "           1       0.88      0.90      0.89       642\n",
+      "           0       0.86      0.84      0.85       579\n",
+      "           1       0.90      0.91      0.90       895\n",
       "\n",
-      "    accuracy                           0.87      1089\n",
-      "   macro avg       0.87      0.86      0.86      1089\n",
-      "weighted avg       0.87      0.87      0.87      1089\n",
+      "    accuracy                           0.88      1474\n",
+      "   macro avg       0.88      0.88      0.88      1474\n",
+      "weighted avg       0.88      0.88      0.88      1474\n",
       "\n"
      ]
     }
