--- a/cc_tenor_pca.ipynb
+++ b/cc_tenor_pca.ipynb
@@ -344,7 +344,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -373,7 +373,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -420,7 +420,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
