--- a/cc_tenor_svm.ipynb
+++ b/cc_tenor_svm.ipynb
@@ -15,10 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pickle\n",
     "from IPython.display import Audio\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -26,7 +27,8 @@
     "from sklearn.decomposition import PCA \n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "from sklearn.metrics import confusion_matrix, classification_report, \\\n",
+    "    precision_recall_curve, roc_curve, roc_auc_score\n",
     "from sklearn.model_selection import train_test_split, \\\n",
     "                                    RandomizedSearchCV, GridSearchCV\n",
     "from sklearn.ensemble import BaggingClassifier\n",
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +137,7 @@
        "PCA(n_components=44)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,14 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8787878787878788\n"
+      "0.8803418803418803\n"
      ]
     }
    ],
@@ -192,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -225,13 +227,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>526</td>\n",
-       "      <td>71</td>\n",
+       "      <td>527</td>\n",
+       "      <td>70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>85</td>\n",
-       "      <td>605</td>\n",
+       "      <td>84</td>\n",
+       "      <td>606</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -239,11 +241,11 @@
       ],
       "text/plain": [
        "     0    1\n",
-       "0  526   71\n",
-       "1   85  605"
+       "0  527   70\n",
+       "1   84  606"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +268,7 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.86      0.88      0.87       597\n",
-      "           1       0.89      0.88      0.89       690\n",
+      "           1       0.90      0.88      0.89       690\n",
       "\n",
       "    accuracy                           0.88      1287\n",
       "   macro avg       0.88      0.88      0.88      1287\n",
@@ -338,24 +340,41 @@
     }
    ],
    "source": [
-    "params"
+    "params\n",
+    "\"\"\"\n",
+    "{'C': 2.5374473415003695,\n",
+    " 'break_ties': False,\n",
+    " 'cache_size': 200,\n",
+    " 'class_weight': None,\n",
+    " 'coef0': 0.0,\n",
+    " 'decision_function_shape': 'ovr',\n",
+    " 'degree': 3,\n",
+    " 'gamma': 'scale',\n",
+    " 'kernel': 'rbf',\n",
+    " 'max_iter': -1,\n",
+    " 'probability': False,\n",
+    " 'random_state': None,\n",
+    " 'shrinking': True,\n",
+    " 'tol': 0.001,\n",
+    " 'verbose': False}\n",
+    " \"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8865578865578866\n"
+      "0.8873348873348873\n"
      ]
     }
    ],
    "source": [
-    "clf = SVC(C=params['C'])\n",
+    "clf = SVC(C=2.5374473415003695)\n",
     "clf.fit(x_train, y_train)\n",
     "y_pred = clf.predict(x_test)\n",
     "print(clf.score(x_test, y_test))\n"
@@ -363,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -394,8 +413,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>527</td>\n",
-       "      <td>70</td>\n",
+       "      <td>528</td>\n",
+       "      <td>69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -408,11 +427,11 @@
       ],
       "text/plain": [
        "     0    1\n",
-       "0  527   70\n",
+       "0  528   69\n",
        "1   76  614"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,9 +536,9 @@
     "#                   bootstrap=True, bootstrap_features=False, \n",
     "#                   oob_score=False, warm_start=False, \n",
     "#                   n_jobs=None, random_state=None, verbose=0) \n",
-    "clf = BaggingClassifier(base_estimator=SVC(C=params['C']),\n",
+    "clf = BaggingClassifier(base_estimator=SVC(C=2.5374473415003695),\n",
     "                        n_estimators=500, \n",
-    "                        max_features=search.best_params_['max_features'],\n",
+    "                        max_features=34,\n",
     "                        random_state=RANDOM_SEED,\n",
     "                        n_jobs=-1)\n",
     "model = clf.fit(x_train, y_train)"
@@ -527,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -576,13 +595,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>525</td>\n",
-       "      <td>72</td>\n",
+       "      <td>524</td>\n",
+       "      <td>73</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>67</td>\n",
-       "      <td>623</td>\n",
+       "      <td>66</td>\n",
+       "      <td>624</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -590,11 +609,11 @@
       ],
       "text/plain": [
        "     0    1\n",
-       "0  525   72\n",
-       "1   67  623"
+       "0  524   73\n",
+       "1   66  624"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -630,6 +649,17 @@
    ],
    "source": [
     "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fn = 'scikit_models/tenor_svm_bagging_tuned_c.pkl'\n",
+    "with open(fn, 'wb') as fh:\n",
+    "    pickle.dump(clf, fh)\n"
    ]
   },
   {
