--- a/cc_alto_tenor_svm_lmsc.ipynb
+++ b/cc_alto_tenor_svm_lmsc.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Testing Tenor Log Mel Spectrogram with Support Vector Machine\n",
+    "# Testing Alto + Tenor Log Mel Spectrogram with Support Vector Machine\n",
     "\n",
     "Here we test a support vector machine on log Mel spectrogram data extracted from our WAV samles. Each log Mel spectrogram has 96 x 96 = 9,216 features, where 96 is the number of frequency bands, and 96 is the number of time slices (collections of 2,297 raw samples). So this is a lot of data.\n",
     "\n",
-    "Upstream from this notebook we extracted these features and saved them as pickles, then we read all the pickles and aggregated them into a Pandas DataFrame, again saved as a pickle. Finally, with the imported `_tenor_lmsc` (below) we read from this pickle, filter and reshape the data as needed, and then we scale data using `sklearn.preprocessing.StandardScaler`. At this point, data are ready to read into our notebook.\n",
+    "Upstream from this notebook we extracted these features and saved them as pickles, then we read all the pickles and aggregated them into a Pandas DataFrame, again saved as a pickle. Finally, with the imported `_alto_tenor_lmsc` (below) we read from this pickle, filter and reshape the data as needed, and then we scale data using `sklearn.preprocessing.StandardScaler`. At this point, data are ready to read into our notebook.\n",
     "\n",
     "In this notebook we define, train, and test a SVM with these log Mel spectrogram data as input."
    ]
@@ -29,11 +29,11 @@
     "from scipy.stats import uniform\n",
     "\n",
     "from _common import NUM_LABEL_COLS, RANDOM_SEED\n",
-    "from _tenor_lmsc import TEST_SIZE, VALIDATION_SIZE, \\\n",
+    "from _alto_tenor_lmsc import TEST_SIZE, VALIDATION_SIZE, \\\n",
     "    BANDS, TIME_SLICES, master, lmss, data, target\n",
     "# Note that records are read from pickle, selected, filtered,\n",
     "# and scaled with `sklearn.preprocessing.StandardScaler` \n",
-    "# in `_tenor_lmsc.py`."
+    "# in `_alto_tenor_lmsc.py`."
    ]
   },
   {
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8498233215547704\n"
+      "0.8604471858134156\n"
      ]
     }
    ],
@@ -99,13 +99,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>434</td>\n",
-       "      <td>86</td>\n",
+       "      <td>445</td>\n",
+       "      <td>101</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>84</td>\n",
-       "      <td>528</td>\n",
+       "      <td>80</td>\n",
+       "      <td>671</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -113,8 +113,8 @@
       ],
       "text/plain": [
        "     0    1\n",
-       "0  434   86\n",
-       "1   84  528"
+       "0  445  101\n",
+       "1   80  671"
       ]
      },
      "execution_count": 5,
@@ -139,12 +139,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.84      0.83      0.84       520\n",
-      "           1       0.86      0.86      0.86       612\n",
+      "           0       0.85      0.82      0.83       546\n",
+      "           1       0.87      0.89      0.88       751\n",
       "\n",
-      "    accuracy                           0.85      1132\n",
-      "   macro avg       0.85      0.85      0.85      1132\n",
-      "weighted avg       0.85      0.85      0.85      1132\n",
+      "    accuracy                           0.86      1297\n",
+      "   macro avg       0.86      0.85      0.86      1297\n",
+      "weighted avg       0.86      0.86      0.86      1297\n",
       "\n"
      ]
     }
@@ -182,7 +182,7 @@
     {
      "data": {
       "text/plain": [
-       "{'C': 2.7590006487818672,\n",
+       "{'C': 5.345613756623556,\n",
        " 'break_ties': False,\n",
        " 'cache_size': 200,\n",
        " 'class_weight': None,\n",
@@ -205,7 +205,24 @@
     }
    ],
    "source": [
-    "params"
+    "params\n",
+    "'''\n",
+    "{'C': 5.345613756623556,\n",
+    " 'break_ties': False,\n",
+    " 'cache_size': 200,\n",
+    " 'class_weight': None,\n",
+    " 'coef0': 0.0,\n",
+    " 'decision_function_shape': 'ovr',\n",
+    " 'degree': 3,\n",
+    " 'gamma': 'scale',\n",
+    " 'kernel': 'rbf',\n",
+    " 'max_iter': -1,\n",
+    " 'probability': False,\n",
+    " 'random_state': None,\n",
+    " 'shrinking': True,\n",
+    " 'tol': 0.001,\n",
+    " 'verbose': False}\n",
+    " '''"
    ]
   },
   {
@@ -217,7 +234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8586572438162544\n"
+      "0.8735543562066307\n"
      ]
     }
    ],
@@ -261,13 +278,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>442</td>\n",
-       "      <td>78</td>\n",
+       "      <td>455</td>\n",
+       "      <td>91</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>82</td>\n",
-       "      <td>530</td>\n",
+       "      <td>73</td>\n",
+       "      <td>678</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -275,8 +292,8 @@
       ],
       "text/plain": [
        "     0    1\n",
-       "0  442   78\n",
-       "1   82  530"
+       "0  455   91\n",
+       "1   73  678"
       ]
      },
      "execution_count": 10,
@@ -301,12 +318,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.84      0.85      0.85       520\n",
-      "           1       0.87      0.87      0.87       612\n",
+      "           0       0.86      0.83      0.85       546\n",
+      "           1       0.88      0.90      0.89       751\n",
       "\n",
-      "    accuracy                           0.86      1132\n",
-      "   macro avg       0.86      0.86      0.86      1132\n",
-      "weighted avg       0.86      0.86      0.86      1132\n",
+      "    accuracy                           0.87      1297\n",
+      "   macro avg       0.87      0.87      0.87      1297\n",
+      "weighted avg       0.87      0.87      0.87      1297\n",
       "\n"
      ]
     }
