--- a/cc_tenor_cnn_lmsc_G.ipynb
+++ b/cc_tenor_cnn_lmsc_G.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -123,6 +123,72 @@
     "# print('AUC: %.2f' % (auc * 100))\n",
     "print('Recall: %.2f' % (recall * 100))\n",
     "print('Accuracy: %.2f' % (accuracy * 100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_11\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_38 (Conv2D)           (None, 95, 95, 128)       640       \n",
+      "_________________________________________________________________\n",
+      "leaky_re_lu_19 (LeakyReLU)   (None, 95, 95, 128)       0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_29 (MaxPooling (None, 47, 47, 128)       0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_39 (Conv2D)           (None, 46, 46, 128)       65664     \n",
+      "_________________________________________________________________\n",
+      "leaky_re_lu_20 (LeakyReLU)   (None, 46, 46, 128)       0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_30 (MaxPooling (None, 23, 23, 128)       0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_40 (Conv2D)           (None, 21, 21, 128)       147584    \n",
+      "_________________________________________________________________\n",
+      "leaky_re_lu_21 (LeakyReLU)   (None, 21, 21, 128)       0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_31 (MaxPooling (None, 10, 10, 128)       0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_41 (Conv2D)           (None, 8, 8, 128)         147584    \n",
+      "_________________________________________________________________\n",
+      "leaky_re_lu_22 (LeakyReLU)   (None, 8, 8, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_32 (MaxPooling (None, 4, 4, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "dropout_28 (Dropout)         (None, 4, 4, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "flatten_10 (Flatten)         (None, 2048)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_28 (Dense)             (None, 128)               262272    \n",
+      "_________________________________________________________________\n",
+      "leaky_re_lu_23 (LeakyReLU)   (None, 128)               0         \n",
+      "_________________________________________________________________\n",
+      "dropout_29 (Dropout)         (None, 128)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_29 (Dense)             (None, 64)                8256      \n",
+      "_________________________________________________________________\n",
+      "leaky_re_lu_24 (LeakyReLU)   (None, 64)                0         \n",
+      "_________________________________________________________________\n",
+      "dropout_30 (Dropout)         (None, 64)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_30 (Dense)             (None, 1)                 65        \n",
+      "=================================================================\n",
+      "Total params: 632,065\n",
+      "Trainable params: 632,065\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
    ]
   },
   {
