--- a/mt_all_saxes_brass_ok_svm_lmsc.ipynb
+++ b/mt_all_saxes_brass_ok_svm_lmsc.ipynb
@@ -15,9 +15,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading lms_data_0.pkl...\n",
+      "(857, 9230)\n",
+      "Reading lms_data_1.pkl...\n",
+      "(867, 9230)\n",
+      "Appending 1...\n",
+      "Reading lms_data_2.pkl...\n",
+      "(873, 9230)\n",
+      "Appending 2...\n",
+      "Reading lms_data_3.pkl...\n",
+      "(882, 9230)\n",
+      "Appending 3...\n",
+      "Reading lms_data_4.pkl...\n",
+      "(874, 9230)\n",
+      "Appending 4...\n",
+      "Reading lms_data_5.pkl...\n",
+      "(859, 9230)\n",
+      "Appending 5...\n",
+      "Reading lms_data_6.pkl...\n",
+      "(877, 9230)\n",
+      "Appending 6...\n",
+      "Reading lms_data_7.pkl...\n",
+      "(867, 9230)\n",
+      "Appending 7...\n",
+      "Reading lms_data_8.pkl...\n",
+      "(871, 9230)\n",
+      "Appending 8...\n",
+      "Making labels...\n",
+      "(7827, 9231)\n",
+      "Selecting columns...\n",
+      "(7827, 9216)\n",
+      "Trying to make numpy...\n",
+      "Applying scaler...\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -40,86 +80,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "NUM_COMPONENTS = 24"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pca = PCA(n_components=NUM_COMPONENTS)    # optimal n_components value determined in mt_cc_all_saxes_brass_ok_pca_lmsc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PCA(n_components=24)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pca.fit(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(pca.explained_variance_ratio_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(pca.singular_values_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d = pca.transform(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "x_train, x_test, y_train, y_test = \\\n",
-    "     train_test_split(d, target,\n",
+    "     train_test_split(data, target,\n",
     "                      test_size=TEST_SIZE,\n",
     "                      random_state=RANDOM_SEED)"
    ]
@@ -133,14 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.801404853128991\n"
+      "0.7943805874840357\n"
      ]
     }
    ],
@@ -153,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -184,13 +150,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>496</td>\n",
-       "      <td>192</td>\n",
+       "      <td>490</td>\n",
+       "      <td>198</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>119</td>\n",
-       "      <td>759</td>\n",
+       "      <td>124</td>\n",
+       "      <td>754</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -198,11 +164,11 @@
       ],
       "text/plain": [
        "     0    1\n",
-       "0  496  192\n",
-       "1  119  759"
+       "0  490  198\n",
+       "1  124  754"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -224,12 +190,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.81      0.72      0.76       688\n",
-      "           1       0.80      0.86      0.83       878\n",
+      "           0       0.80      0.71      0.75       688\n",
+      "           1       0.79      0.86      0.82       878\n",
       "\n",
-      "    accuracy                           0.80      1566\n",
-      "   macro avg       0.80      0.79      0.80      1566\n",
-      "weighted avg       0.80      0.80      0.80      1566\n",
+      "    accuracy                           0.79      1566\n",
+      "   macro avg       0.80      0.79      0.79      1566\n",
+      "weighted avg       0.79      0.79      0.79      1566\n",
       "\n"
      ]
     }
@@ -247,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,17 +230,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.8026819923371648\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "clf = SVC(C=params['C'])\n",
     "clf.fit(x_train, y_train)\n",
@@ -284,220 +251,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>501</td>\n",
-       "      <td>187</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>122</td>\n",
-       "      <td>756</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     0    1\n",
-       "0  501  187\n",
-       "1  122  756"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c_matrix = confusion_matrix(y_test, y_pred)\n",
-    "idx = cols = [0, 1]\n",
-    "pd.DataFrame(c_matrix, index=idx, columns=cols)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.80      0.73      0.76       688\n",
-      "           1       0.80      0.86      0.83       878\n",
-      "\n",
-      "    accuracy                           0.80      1566\n",
-      "   macro avg       0.80      0.79      0.80      1566\n",
-      "weighted avg       0.80      0.80      0.80      1566\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(classification_report(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Test ensemble approach with bagging classifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'max_features': 16}"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# param_grid = {'max_features': [NUM_COMPONENTS - 2, NUM_COMPONENTS - 3, \n",
-    "#                                NUM_COMPONENTS - 4, NUM_COMPONENTS - 5,\n",
-    "#                                NUM_COMPONENTS - 6, NUM_COMPONENTS - 7, \n",
-    "#                                NUM_COMPONENTS - 8, NUM_COMPONENTS - 9,\n",
-    "#                                NUM_COMPONENTS - 10, NUM_COMPONENTS - 11,\n",
-    "#                                NUM_COMPONENTS - 12, NUM_COMPONENTS - 13]}\n",
-    "\n",
-    "# base_estimator = SVC(C=params['C'])\n",
-    "# estimator = BaggingClassifier(base_estimator=base_estimator, n_estimators=100)\n",
-    "\n",
-    "# clf = GridSearchCV(estimator, param_grid, n_jobs=-1)\n",
-    "# search = clf.fit(x_train, y_train)\n",
-    "# search.best_params_\n",
-    "\n",
-    "# max_features = 16"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    " clf = BaggingClassifier(base_estimator=SVC(C=params['C']),\n",
-    "                        n_estimators=400, \n",
-    "                        max_features=16,\n",
-    "                        random_state=42)\n",
-    "model = clf.fit(x_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.7969348659003831\n"
-     ]
-    }
-   ],
-   "source": [
-    "y_pred = clf.predict(x_test)\n",
-    "print(clf.score(x_test, y_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>480</td>\n",
-       "      <td>208</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>110</td>\n",
-       "      <td>768</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     0    1\n",
-       "0  480  208\n",
-       "1  110  768"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "c_matrix = confusion_matrix(y_test, y_pred)\n",
     "idx = cols = [0, 1]\n",
     "pd.DataFrame(c_matrix, index=idx, columns=cols)"
@@ -505,25 +262,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.81      0.70      0.75       688\n",
-      "           1       0.79      0.87      0.83       878\n",
-      "\n",
-      "    accuracy                           0.80      1566\n",
-      "   macro avg       0.80      0.79      0.79      1566\n",
-      "weighted avg       0.80      0.80      0.79      1566\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(classification_report(y_test, y_pred))"
    ]
